# juce_libvlc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  juce_libvlc.cpp  juce_libvlc.h  juce_libvlc_config.h
cmake/: FindLibVLC.cmake
examples/: VideoPlayerExample.h  example_main.cpp
juce_media/: ISeekableMedia.h  VLCMediaPlayer.cpp  VLCMediaPlayer.h
test/: test_main.cpp
